--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,13 +6,27 @@
 	android:layout_height="match_parent"
 	tools:context=".Presentation.MainActivity">
 
+
 	<androidx.recyclerview.widget.RecyclerView
-		android:layout_width="409dp"
-		android:layout_height="729dp"
+		android:id="@+id/rv_shop_list"
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"
 		app:layout_constraintBottom_toBottomOf="parent"
 		app:layout_constraintEnd_toEndOf="parent"
 		app:layout_constraintStart_toStartOf="parent"
-		app:layout_constraintTop_toTopOf="parent" />
+		app:layout_constraintTop_toTopOf="parent"
+		app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
 
+	<com.google.android.material.floatingactionbutton.FloatingActionButton
+		android:id="@+id/floatingActionButton"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:clickable="true"
+		android:contentDescription="Add Now Shop Item"
+		app:layout_constraintBottom_toBottomOf="parent"
+		android:layout_marginBottom="16dp"
+		android:layout_marginRight="16dp"
+		app:layout_constraintEnd_toEndOf="parent"
+		app:srcCompat="@android:drawable/ic_input_add" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
