--- a/app/src/main/res/layout/item_shop_enabled.xml
+++ b/app/src/main/res/layout/item_shop_enabled.xml
@@ -8,7 +8,8 @@
 	android:layout_marginStart="8dp"
 	app:cardCornerRadius="4dp"
 	app:cardElevation="4dp"
-	app:cardUseCompatPadding="true">
+	app:cardUseCompatPadding="true"
+	android:focusable="true">
 	
 	<LinearLayout
 		android:layout_width="match_parent"
