--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,31 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-	xmlns:app="http://schemas.android.com/apk/res-auto"
-	xmlns:tools="http://schemas.android.com/tools"
-	android:layout_width="match_parent"
-	android:layout_height="match_parent"
-	tools:context=".Presentation.MainActivity">
+<layout>
 
-	<androidx.recyclerview.widget.RecyclerView
-		android:id="@+id/rv_shop_list"
+	<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+		xmlns:app="http://schemas.android.com/apk/res-auto"
+		xmlns:tools="http://schemas.android.com/tools"
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
-		app:layout_constraintBottom_toBottomOf="parent"
-		app:layout_constraintEnd_toEndOf="parent"
-		app:layout_constraintStart_toStartOf="parent"
-		app:layout_constraintTop_toTopOf="parent"
-		app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
+		tools:context=".presentation.MainActivity">
 
-	<com.google.android.material.floatingactionbutton.FloatingActionButton
-		android:id="@+id/floatingActionButton"
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		android:clickable="true"
-		android:contentDescription="Add Now Shop Item"
-		app:layout_constraintBottom_toBottomOf="parent"
-		android:layout_marginBottom="16dp"
-		android:layout_marginRight="16dp"
-		app:layout_constraintEnd_toEndOf="parent"
-		app:srcCompat="@android:drawable/ic_input_add" />
+		<androidx.recyclerview.widget.RecyclerView
+			android:id="@+id/rv_shop_list"
+			android:layout_width="match_parent"
+			android:layout_height="match_parent"
+			app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+			app:layout_constraintBottom_toBottomOf="parent"
+			app:layout_constraintEnd_toEndOf="parent"
+			app:layout_constraintStart_toStartOf="parent"
+			app:layout_constraintTop_toTopOf="parent" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+		<com.google.android.material.floatingactionbutton.FloatingActionButton
+			android:id="@+id/floatingActionButton"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:layout_marginBottom="16dp"
+			android:layout_marginRight="16dp"
+			android:clickable="true"
+			android:contentDescription="Add Now Shop Item"
+			app:layout_constraintBottom_toBottomOf="parent"
+			app:layout_constraintEnd_toEndOf="parent"
+			app:srcCompat="@android:drawable/ic_input_add" />
+
+	</androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
