--- a/app/src/main/res/layout/item_shop_disabled.xml
+++ b/app/src/main/res/layout/item_shop_disabled.xml
@@ -1,39 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-	android:layout_width="match_parent"
-	android:layout_height="wrap_content"
-	xmlns:app="http://schemas.android.com/apk/res-auto"
-	android:layout_marginTop="4dp"
-	android:layout_marginEnd="4dp"
-	android:layout_marginStart="8dp"
-	app:cardCornerRadius="4dp"
-	app:cardElevation="1dp"
-	app:cardUseCompatPadding="true"
-	android:focusable="true">
+<layout>
 
-	<LinearLayout
+	<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+		xmlns:app="http://schemas.android.com/apk/res-auto"
 		android:layout_width="match_parent"
-		android:layout_height="match_parent"
-		android:paddingTop="20dp"
-		android:paddingBottom="20dp"
-		android:paddingStart="17dp"
-		android:paddingEnd="20dp"
-		android:background="#33BB86FC">
+		android:layout_height="wrap_content"
+		android:layout_marginEnd="4dp"
+		android:layout_marginStart="8dp"
+		android:layout_marginTop="4dp"
+		android:focusable="true"
+		app:cardCornerRadius="4dp"
+		app:cardElevation="1dp"
+		app:cardUseCompatPadding="true">
 
-		<TextView
-			android:id="@+id/shop_item_name"
-			android:layout_width="0dp"
-			android:layout_height="wrap_content"
-			android:text="Test item"
-			android:layout_weight="1"
-			android:textColor="@color/white"/>
+		<LinearLayout
+			android:layout_width="match_parent"
+			android:layout_height="match_parent"
+			android:background="#33BB86FC"
+			android:paddingBottom="20dp"
+			android:paddingEnd="20dp"
+			android:paddingStart="17dp"
+			android:paddingTop="20dp">
 
-		<TextView
-			android:id="@+id/shop_item_count"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:text="1"
-			android:textColor="@color/white"/>
+			<TextView
+				android:id="@+id/shop_item_name"
+				android:layout_width="0dp"
+				android:layout_height="wrap_content"
+				android:layout_weight="1"
+				android:text="Test item"
+				android:textColor="@color/white" />
 
-	</LinearLayout>
-</androidx.cardview.widget.CardView>
+			<TextView
+				android:id="@+id/shop_item_count"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:text="1"
+				android:textColor="@color/white" />
+
+		</LinearLayout>
+	</androidx.cardview.widget.CardView>
+</layout>
